fixed the layout of the view task modal

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -88,14 +88,14 @@ button {
 }
 
 button.due-date-toggle {
-	width: min(f.rem(200), 100%);
+	width: min(f.rem(200), 80%);
 	height: f.rem(50);
 	background-color: colors.$darker-gray;
 	border: none;
 	border-radius: f.rem(8);
 
 	font-family: fonts.$main-font;
-	font-size: f.rem(15);
+	font-size: f.rem(13);
 	margin: 0 auto;
 	margin-top: f.rem(10);
 
@@ -107,6 +107,10 @@ button.due-date-toggle {
 
 	&:active {
 		background-color: colors.$darker-gray;
+	}
+
+	@include b.breakpoints-up(medium) {
+		font-size: f.rem(15);
 	}
 }
 
