--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -252,13 +252,10 @@
 		border-radius: f.rem(12);
 
 		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
 
 		.details-div {
 			width: 90%;
-
+			margin: auto;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
@@ -279,6 +276,7 @@
 				.task-specific-detail {
 					width: 95%;
 					display: flex;
+					gap: f.rem(10);
 					justify-content: space-between;
 					align-items: center;
 					margin-left: f.rem(20);
